<resources>
    <string name="app_name">CF Transport</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="enter_name">Full Name</string>
    <string name="enter_contact_number">Contact Number</string>
    <string name="error_while_logging_in">Error while Logging in</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="instructions">Instructions</string>
    <string name="request_order">Request Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>